@@ -1,5 +1,6 @@
 Version 0.93 - 17 August 2012, by Per Øyvind Karlsen <peroyvind@mandriva.org>
 
+- convert mouse helper to use udevadm in order to work with udev 175+
 - default to 24bit with QXL driver (16 bit doesn't work)
 - do not offer to try KMS drivers during installation (mga#3711)
 - display_driver_helper: use the new modprobe --resolve-alias instead
